@@ -30,6 +30,10 @@ shinsplat_clip_text_encode
 		not an expected behavior and noodles can be piped into the areas
 		needed instead of using this node as a gateway.  I removed flaw.
 
+		"END" directive respected on all inputs separately.
+
+		Output tokens now accurately representing inputs.
+
 	6/6/2024
 		The prompt_before wasn't working properly, should be fixed now.
 
